made tweets on first page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 layout: default
 ---
 
-
-
-
 <div class="home">
 	
 	<img class="banner" src="{{ site.baseurl }}/resources/images/memphis-banner.gif">
+	
+	
+<p>ACM SenSys introduces a highly selective, single-track forum for research on systems issues of networked sensing and actuation, broadly defined. Systems of smart sensors and actuators will revolutionize a wide array of application areas by providing an unprecedented density and fidelity of instrumentation. They also present systems challenges because of resource constraints, uncertainty, irregularity, mobility, and scale. This conference provides an ideal venue to address research challenges facing the design, development, deployment, use, and fundamental limits of these systems. Sensing and actuation systems require contributions from many fields, from wireless communication and networking, embedded systems and hardware, energy harvesting and management, distributed systems and algorithms, data management, and applications, so we welcome cross-disciplinary work. </p>
 
-<p>ACM SenSys introduces a highly selective, single-track forum for research on systems issues of networked sensing and actuation, broadly defined. Systems of smart sensors and actuators will revolutionize a wide array of application areas by providing an unprecedented density and fidelity of instrumentation. They also present systems challenges because of resource constraints, uncertainty, irregularity, mobility, and scale. This conference provides an ideal venue to address research challenges facing the design, development, deployment, use, and fundamental limits of these systems. Sensing and actuation systems require contributions from many fields, from wireless communication and networking, embedded systems and hardware, energy harvesting and management, distributed systems and algorithms, data management, and applications, so we welcome cross-disciplinary work.</p>
+<br/>
+<a class="twitter-timeline" width="900" height="300" href="https://twitter.com/SenSys2014" data-widget-id="479053520000135169">Tweets by @SenSys2014</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
 
   <!--ul class="posts">
     {% for post in site.posts %}
@@ -20,6 +24,6 @@ layout: default
     {% endfor %}
   </ul-->
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  
 
 </div>
