added important dates and documents

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="home">
+<div class="home post-content">
 	
 	<img class="banner" src="{{ site.baseurl }}/resources/images/memphis-banner.gif">
 	
@@ -10,10 +10,27 @@ layout: default
 <p>ACM SenSys introduces a highly selective, single-track forum for research on systems issues of networked sensing and actuation, broadly defined. Systems of smart sensors and actuators will revolutionize a wide array of application areas by providing an unprecedented density and fidelity of instrumentation. They also present systems challenges because of resource constraints, uncertainty, irregularity, mobility, and scale. This conference provides an ideal venue to address research challenges facing the design, development, deployment, use, and fundamental limits of these systems. Sensing and actuation systems require contributions from many fields, from wireless communication and networking, embedded systems and hardware, energy harvesting and management, distributed systems and algorithms, data management, and applications, so we welcome cross-disciplinary work. </p>
 
 <br/>
+
+<div class="col2">
+
 <a class="twitter-timeline" width="900" height="300" href="https://twitter.com/SenSys2014" data-widget-id="479053520000135169">Tweets by @SenSys2014</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
+</div>
 
+<div class="col2">
+<h2>Important Dates</h2>
+
+<ul>
+<li> <b>Paper Notification:</b> July 15 </li>
+<li> Poster and Demo Abstract Submission: July 28 </li>
+<li> Poster and Demo Notification: August 28 </li>
+<li> Paper Camera Ready: September 1 </li>
+<li> Poster/Demo Abstract Camera Ready: September 15 </li>
+</ul>
+
+
+</div>
 
   <!--ul class="posts">
     {% for post in site.posts %}
