published the program!

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ layout: default
 <h2>Important Dates</h2>
 
 <ul>
-<li> <b>Paper Notification:</b> July 15 </li>
+<li> Early registration deadline: October 6 </li>
+<li> Hotel special rate: October 3 </li>
+<li> Paper Notification: July 15 </li>
 <li> Poster and Demo Abstract Submission: August 4 (updated!)</li>
 <li> Poster and Demo Notification: August 28 </li>
 <li> Paper Camera Ready: September 1 </li>
