--- a/index.html
+++ b/index.html
@@ -10,9 +10,51 @@ layout: default
  
 	<p>The 12th ACM Conference on Embedded Networked Sensor Systems (SenSys 2014) introduces a highly selective, single-track forum for research on systems issues of networked sensing and actuation, broadly defined. Systems of smart sensors and actuators will revolutionize a wide array of application areas by providing an unprecedented density and fidelity of instrumentation. They also present systems challenges because of resource constraints, uncertainty, irregularity, mobility, and scale. This conference provides an ideal venue to address research challenges facing the design, development, deployment, use, and fundamental limits of these systems. Sensing and actuation systems require contributions from many fields, from wireless communication and networking, embedded systems and hardware, energy harvesting and management, distributed systems and algorithms, data management, and applications, so we welcome cross-disciplinary work. </p>
 
+
+<h2> 2014 Award Winners </h2>
+
+<div class="awardblock"><div class="dateitem">Test of Time</div> 
+<div class="awarddesc">
+The Flooding Time Syncronization Protocol <br/>
+<span class="authors">Miklós Maróti, Branislav Kusy, Gyula Simon, and Ákos Lédeczi</span>
+<br/><br/>
+Versatile Low Power Media Access for Wireless Sensor Networks <br/>
+<span class="authors">Joseph Polastre, Jason Hill, and David Culler</span>
+</div>
+</div>
+
 <br/>
 
- 
+<div class="awardblock"><div class="awarditem">Best Paper</div> 
+<div class="awarddesc">
+Ekho: Realistic and Repeatable Experimentation for Tiny Energy-Harvesting Sensors <br/>
+<span class="authors">Josiah Hester, Timothy Scott, Jacob Sorber (Clemson University)</span>
+</div>
+</div>
+
+<div class="awardblock"><div class="awarditem">Best Demo</div> 
+<div class="awarddesc">
+HeartSense: Smart Phones to Estimate Blood Pressure from Photoplethysmography <br/>
+<span class="authors">Rohan Banerjee, Anirban Dutta Choudhury, Aniruddha Sinha and
+Aishwarya Visvanathan (Tata Consultancy Services)</span>
+</div>
+</div>
+
+<div class="awardblock"><div class="awarditem">Best Poster</div> 
+<div class="awarddesc">
+A Modular Architecture for Miniature Capsule Robots Based on TinyOS <br/>
+<span class="authors">Addisu Taddese, Marco Becanni, Ekawahyu Susilo,
+Péter Völgyesi, Ákos Lédeczi and Pietro Valdastri (Vanderbilt University)</span><br/>
+
+</div>
+</div>
+
+<div class="awardblock"><div class="awarditem">Best Presentation</div> 
+<div class="awarddesc">
+Feasibility and Limits of Wi-Fi Imaging <br/>
+<span class="authors">Rajalakshmi Nandakumar (University of Washington)</span>
+</div>
+</div>
 
 <div class="col2">
 
